исправлены баги (часть 1)

--- a/public/sass/dispute.sass
+++ b/public/sass/dispute.sass
@@ -21,3 +21,26 @@
     span
       float: right
       font-size: 12px
+.data
+  span
+    font-style: italic
+    display: inline-block
+    margin-bottom: 5px
+.solution
+  text-align: center
+  margin-bottom: 40px
+  textarea
+    resize: none
+    margin-bottom: 15px
+  h4
+    text-transform: uppercase
+    border-bottom:  1px solid #fff
+    font-weight: bold
+  .marks
+    text-align: left
+  .choose
+    text-align: left
+    label
+      display: block
+.btn-wrap
+  text-align: center
