--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -27,7 +27,9 @@ ul
   button
     background-color: $bgc
 #addwork
+  display: inline-block
   cursor: pointer
+  margin-bottom: 5px
 #profile
   form
     margin-bottom: 20px
@@ -69,6 +71,7 @@ ul
   li
     display: inline-block
     margin-right: 25px
-
+.fa-caret-down
+  margin-left: 3px
   
 
