исправлены баги (часть 2)

--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -73,5 +73,11 @@ ul
     margin-right: 25px
 .fa-caret-down
   margin-left: 3px
+.messages
+  p
+    text-transform: uppercase
+.last-tasks
+  p
+    text-transform: uppercase
   
 
