--- a/views/includes/last_tasks.jade
+++ b/views/includes/last_tasks.jade
@@ -1,3 +1,3 @@
-.col-lg-3
+.col-lg-3.col-md-3.col-sm-3.col-xs-3.last-tasks
     p Последние выполненные задания
-    .well(style="height:100vh")
+    .well(style="height:auto")
