--- a/views/includes/messages.jade
+++ b/views/includes/messages.jade
@@ -1,3 +1,6 @@
-.col-lg-3
+style
+    include ../../public/css/notify.css
+.col-lg-3.col-md-3.col-sm-3.col-xs-3.messages
     p Сообщения
-    .well(style="height:100vh")
+    .well(ng-controller="NotifyCtrl",style="height:auto")
+        div(notification-list="notifications")
