--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,7 @@ html(lang="en",ng-app="app")
         link(rel="stylesheet",href="/css/font-awesome.css")
         link(rel="stylesheet",href="/css/fonts.css")
         link(rel="stylesheet",href="/css/main.css")
+        link(rel="stylesheet",href="/css/notify.css")
         block additional_styles
     body
         block content
@@ -15,4 +16,7 @@ html(lang="en",ng-app="app")
             script(src="/libs/angular/angular.js")
             script(src="/js/config.js")
             script(src="/js/app.js")
+            script(src="/js/controllers/notify.js")
         block additional_scripts
+
+
