--- a/views/includes/comment.jade
+++ b/views/includes/comment.jade
@@ -5,14 +5,13 @@
                 button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
                 h4.modal-title Напишите отзыв и поставьте оценку исполнителю
             .modal-body
-                form(method="post",action="/task/add/comment")
-                    input(type="hidden", name="id", value="{{task._id}}")
-                    textarea.message(rows=5,name="comment",placeholder="Отзыв")
-                    input(type="radio",name="mark",value="0")
+                form(ng-submit="AddComment()", id="addcomment")
+                    textarea.message(rows=5,name="comment",placeholder="Отзыв", ng-model="result.comment")
+                    input(type="radio",name="mark",value="0", ng-model="result.mark")
                     | Положительная
-                    input(type="radio",name="mark",value="1")
+                    input(type="radio",name="mark",value="1", ng-model="result.mark")
                     | Нейтральная
-                    input(type="radio",name="mark",value="2")
+                    input(type="radio",name="mark",value="2", ng-model="result.mark")
                     | Отрицательная
                     button.btn.btn-default(type="submit") Отправить
             .modal-footer
