--- a/views/includes/messages.jade
+++ b/views/includes/messages.jade
@@ -2,5 +2,5 @@ style
     include ../../public/css/notify.css
 .col-lg-3.col-md-3.col-sm-3.col-xs-3.messages
     p Сообщения
-    .well(ng-controller="NotifyCtrl",style="height:auto")
+    .well(ng-controller="Chat as chat",style="height:auto",ng-init="subscribeExecuterTasks(); subscribeCustomersTasks(); getNotifications();")
         div(notification-list="notifications")
