--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,7 +16,7 @@ html(lang="en",ng-app="app")
             script(src="/libs/angular/angular.js")
             script(src="/js/config.js")
             script(src="/js/app.js")
-            script(src="/js/controllers/notify.js")
+            script(src="/js/controllers/chat.js")
         block additional_scripts
 
 
