--- a/views/send_result.jade
+++ b/views/send_result.jade
@@ -6,7 +6,7 @@ block additional_styles
 block content
     include includes/navbar
     include mixins/genGroupField
-    .container-fluid
+    .container-fluid(ng-controller="TaskCtrl")
         .row
             include includes/messages
             .col-lg-6
@@ -14,9 +14,9 @@ block content
                     p Прикрепите необходимые файлы
                     .div(ng-init="task= #{JSON.stringify(task)}")
                         include includes/task
-                    form(action="/request/sendresult", method="post", enctype="multipart/form-data")
+                    form(ng-submit="sendResult()", id="sendresult", name="sendresult", enctype="multipart/form-data")
                         +genGroupField('message','Сообщение',"","message")(tag='textarea')
-                        +genGroupField('files','Прикрепите файлы',"")(tag='input',type="file",other="multiple")
+                        +genGroupField('files','Прикрепите файлы',"","files")(tag='input',type="file",other="multiple")
                         input(name='task',value='{{task._id}}',type='hidden')
                         button.btn.btn-primary.continue(type="submit") Отправить
             include includes/last_tasks
