Попровалены баги. Добавлено отображение текста заявки.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,6 +7,7 @@ html(lang="en",ng-app="app")
         link(rel="stylesheet",href="/css/fonts.css")
         link(rel="stylesheet",href="/css/main.css")
         link(rel="stylesheet",href="/css/notify.css")
+        link(rel="stylesheet",href="/css/media.css")
         block additional_styles
     body
         block content
