--- a/public/sass/notify.sass
+++ b/public/sass/notify.sass
@@ -8,6 +8,8 @@
     margin-bottom: 5px
     display: block
     font-weight: bold
+    background-color: transparent
+    color: #fff
   .date
     font-size: 10px
     display: block
