--- a/public/sass/request.sass
+++ b/public/sass/request.sass
@@ -13,6 +13,7 @@
   .icon_set
     position: absolute
     right: 0
+    top: 0
     display: inline-block
     padding-top: 2px
     i
@@ -31,7 +32,7 @@
   padding: 0
   .author
     width: 100%
-    height: 30px
+    height: auto
     border-top: none
     line-height: 30px
     cursor: pointer
@@ -46,6 +47,10 @@
       text-decoration: none
     &:last-child
       border-bottom: none
+    p
+      line-height: 1
+      font-size: 12px
+      font-style: italic
 #dispute
   textarea
     width: 100%
