--- a/views/customer.jade
+++ b/views/customer.jade
@@ -9,7 +9,7 @@ block content
     .container-fluid(ng-controller="TaskCtrl")
         .row
             include includes/messages
-            .col-lg-6
+            .col-lg-9.col-md-8.col-sm-7.col-xs-12
                 include includes/customer_menu
                 .row
                     #owl-carousel
@@ -34,7 +34,6 @@ block content
                                     +genGroupField('files','Файлы',"","files")(tag='input',type="file")
                                     a.btn.btn-primary.prev Назад
                                     button.btn.btn-primary.continue(type="submit") Продолжить
-            include includes/last_tasks
 block additional_scripts
     script(src="/js/controllers/task.js")
     script(src="/js/category.js")
