--- a/views/includes/navbar.jade
+++ b/views/includes/navbar.jade
@@ -1,18 +1,20 @@
 nav.navbar.navbar-default.navbar-fixed-top
     .container-fluid
-        .navbar-brand
-            a FF
-        a(href="/task/get").btn.btn-default.navbar-btn.role Исполнитель
-        a(href="/task/add").btn.btn-default.navbar-btn.role Заказчик
-        case user.role
-            when "Администратор"
-                a(href="/admin").btn.btn-default.navbar-btn.role Администратор
-            when "Арбитраж"
-                a(href="/dispute").btn.btn-default.navbar-btn.role Арбитраж
-        button.btn.btn-sm.btn-default.navbar-btn.navbar-right(id="logout") Выйти
-        p.navbar-text.navbar-right Баланс: #{user.score}
-        p.navbar-text.navbar-right(id='#{user._id}') Добро пожаловать,
-            a(href='/user/#{user._id}') #{user.name}
+        .row
+            .col-lg-12
+                .navbar-brand
+                    a(href='/user/#{user._id}') FF
+                a(href="/task/get").btn.btn-default.navbar-btn.role Исполнитель
+                a(href="/task/add").btn.btn-default.navbar-btn.role Заказчик
+                case user.role
+                    when "Администратор"
+                        a(href="/admin").btn.btn-default.navbar-btn.role Администратор
+                    when "Арбитраж"
+                        a(href="/dispute").btn.btn-default.navbar-btn.role Арбитраж
+                button.btn.btn-sm.btn-default.navbar-btn.navbar-right(id="logout") Выйти
+                p.navbar-text.navbar-right Баланс: #{user.score}
+                p.navbar-text.navbar-right(id='#{user._id}') Добро пожаловать,
+                    a(href='/user/#{user._id}') #{user.name}
 
 
 
