--- a/views/includes/request/customer/request_search.jade
+++ b/views/includes/request/customer/request_search.jade
@@ -2,6 +2,7 @@
     include request_header
     .authors.col-lg-5
         a.author(ng-repeat="req in request.requests", ng-click="viewAuthorInfo(req.executer._id)") {{req.executer.name}}
+            p {{req.message}} dsfdsfsdfsd sds sdsfsf sfsdf sdfs sdfsfsfs s sd s s s
             .icon_set
                 i(data-toggle="tooltip" data-placement="right" title="" data-original-title="Tooltip on right",
                 ng-click="AcceptRequest(req._id, request.task._id, $event); $event.stopPropagation();").fa.fa-plus-square
