--- a/views/customer.jade
+++ b/views/customer.jade
@@ -8,8 +8,8 @@ block content
     include mixins/genGroupField
     .container-fluid(ng-controller="TaskCtrl")
         .row
-            include includes/messages
-            .col-lg-9.col-md-8.col-sm-7.col-xs-12
+            include includes/notifications
+            .col-lg-6
                 include includes/customer_menu
                 .row
                     #owl-carousel
@@ -34,6 +34,7 @@ block content
                                     +genGroupField('files','Файлы',"","files")(tag='input',type="file")
                                     a.btn.btn-primary.prev Назад
                                     button.btn.btn-primary.continue(type="submit") Продолжить
+            include includes/top
 block additional_scripts
     script(src="/js/controllers/task.js")
     script(src="/js/category.js")
