--- a/views/send_result.jade
+++ b/views/send_result.jade
@@ -8,7 +8,7 @@ block content
     include mixins/genGroupField
     .container-fluid(ng-controller="TaskCtrl")
         .row
-            include includes/messages
+            include includes/notifications
             .col-lg-6
                 .row
                     p Прикрепите необходимые файлы
@@ -19,7 +19,7 @@ block content
                         +genGroupField('files','Прикрепите файлы',"","files")(tag='input',type="file",other="multiple")
                         input(name='task',value='{{task._id}}',type='hidden')
                         button.btn.btn-primary.continue(type="submit") Отправить
-            include includes/last_tasks
+            include includes/top
 block additional_scripts
     script(src="/js/controllers/task.js")
 
