--- a/views/view_result.jade
+++ b/views/view_result.jade
@@ -7,7 +7,7 @@ block content
     include mixins/genGroupField
     .container-fluid
         .row
-            include includes/messages
+            include includes/notifications
             .col-lg-6
                 .row
                     p Прикрепите необходимые файлы
@@ -29,7 +29,7 @@ block content
                             button.btn.btn-danger#dispute(ng-click="SendDispute(null,task._id)") Арбитраж
 
 
-            include includes/last_tasks
+            include includes/top
 block additional_scripts
     script(src="/js/controllers/task.js")
     script(src="/js/controllers/request.js")
