Сделаны прогресс-бары для оценок

--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -11,14 +11,27 @@ form
     text-align: left
 ul
   list-style-type: none
+#stats
+  text-transform: uppercase
+  font-weight: bold
   .positive
     color: $green
+    .progress-bar
+      background-color: $green
   .neitral
     color: $blue
+    .progress-bar
+      background-color: $blue
   .negative
     color: $red
+    .progress-bar
+      background-color: $red
+.progress
+  margin-top: 10px
 .rating
   font-weight: bold
+
+
 #upload
   display: none
   margin-bottom: 25px
