--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html(lang="en",ng-app="app")
     head
         title Главная
         link(rel="stylesheet",href="/libs/bootstrap/bootstrap.css")
+        link(rel="stylesheet",href="/libs/sweetalert/dist/sweetalert.css")
         link(rel="stylesheet",href="/css/font-awesome.css")
         link(rel="stylesheet",href="/css/fonts.css")
         link(rel="stylesheet",href="/css/main.css")
@@ -14,10 +15,12 @@ html(lang="en",ng-app="app")
         block scripts
             script(src="/libs/jquery/dist/jquery.min.js")
             script(src="/libs/bootstrap/bootstrap.js")
+            script(src="/libs/sweetalert/dist/sweetalert.min.js")
             script(src="/libs/angular/angular.js")
             script(src="/js/config.js")
             script(src="/js/app.js")
             script(src="/js/controllers/chat.js")
+            script(src="/js/error_handler.js")
         block additional_scripts
 
 
