Сделана валидация форм.

--- a/views/executer.jade
+++ b/views/executer.jade
@@ -14,17 +14,20 @@ block content
                         include includes/task
                     include includes/paginator
             include includes/top
-    .modal.fade(id="modal_message")
-        .modal-dialog
-            .modal-content
-                .modal-header
-                    button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
-                    h4.modal-title Напишите свое сообщение
-                .modal-body
-                    textarea.message(placeholder="Сообщение")
-                .modal-footer
-                    button.btn.btn-default.no(type='button', data-dismiss='modal') Закрыть
-                    button.btn.btn-primary.yes(type='button') Отправить заявку
+        .modal.fade(id="modal_message")
+            .modal-dialog
+                .modal-content
+                    .modal-header
+                        button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
+                        h4.modal-title Напишите свое сообщение
+                    .modal-body
+                        form(ng-submit="SendRequest()", name="addRequest", id="addRequest")
+                            textarea.message(name="message",placeholder="Сообщение",ng-model="result.message")
+                            div(ng-show="isEmpty(addRequest.message.$error)",style="color: #F2B1B1") {{addRequest.message.$error}}
+                            button.btn.btn-primary(type="submit") Отправить заявку
+                    .modal-footer
+                        button.btn.btn-default.no(type='button', data-dismiss='modal') Закрыть
+
 block additional_scripts
     script(src="/js/controllers/task.js")
 
