--- a/views/send_result.jade
+++ b/views/send_result.jade
@@ -15,7 +15,8 @@ block content
                     .div(ng-init="task= #{JSON.stringify(task)}")
                         include includes/task
                     form(ng-submit="sendResult()", id="sendresult", name="sendresult", enctype="multipart/form-data")
-                        +genGroupField('message','Сообщение',"","message")(tag='textarea')
+                        +genGroupField('result.message','Сообщение',"","result.message")(tag='textarea')
+                        div(ng-show="isEmpty(sendresult['result.message'].$error)",style="color: #F2B1B1") {{sendresult['result.message'].$error}}
                         +genGroupField('files','Прикрепите файлы',"","files")(tag='input',type="file",other="multiple")
                         input(name='task',value='{{task._id}}',type='hidden')
                         button.btn.btn-primary.continue(type="submit") Отправить
