Добавлены графики в статистику пользователя

--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -92,5 +92,9 @@ ul
 .last-tasks
   p
     text-transform: uppercase
-  
+canvas
+  width: 100% !important
+  height: auto
+  background-color: #ffffff
+  margin-top: 10px
 
