Добвлена статистика для администратора

--- a/views/admin.jade
+++ b/views/admin.jade
@@ -1,8 +1,11 @@
 extends layout
 block additional_styles
     link(rel="stylesheet",href="/css/admin.css")
+    link(rel="stylesheet",href="/css/executer.css")
+    link(rel="stylesheet",href="/css/passive_task.css")
 block content
     .container(ng-controller="Admin")
+        a.btn.btn-sm.btn-primary(href="/user/#{user._id}") Вернуться в профиль
         ul.nav.nav-tabs(id="tabs")
             li.active
                 a(href='#users',data-toggle="tab") Пользователи
@@ -74,7 +77,18 @@ block content
                                     td {{task.header}}
                                     td {{task.requests.length}}
                                     td: i.fa.fa-times(ng-click="deleteTask(task._id)")
-                                    td: i.fa.fa-file-o(ng-click="viewTask(task._id)")
+                                    td
+                                        i.fa.fa-file-o(data-toggle="modal",data-target="#{{task._id}}")
+                                        .modal(id='{{task._id}}')
+                                            .modal-dialog
+                                                .modal-content
+                                                    .modal-header
+                                                        span Задание № {{task._id}}
+                                                        button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
+                                                    .modal-body
+                                                        include includes/task
+                                                    .modal-footer
+                                                        button.btn.btn-default(type='button', data-dismiss='modal') Закрыть
                     .col-lg-5
                         p Топ-10 заданий
                             table.table.table-striped.table-hover
@@ -88,7 +102,14 @@ block content
                                         td {{$index+1}}
                                         td {{task.header}}
                                         td {{task.requests.length}}
-            .well.tab-pane.fade(id="stats")
+            .well.tab-pane.fade(id="stats",ng-controller="StatsCtrl")
+                div.chart-container Активность размещения заданий
+                    canvas(drawing, url="/stats/admin/ordersperdate")
+                div.chart-container Активность выполнения заданий
+                    canvas(drawing, url="/stats/admin/worksperdate")
+
 
 block additional_scripts
     script(src="/js/controllers/admin.js")
+    script(src="/js/controllers/stats.js")
+    script(src="/libs/Chart.js/dist/Chart.js")
