--- a/views/customer_tasks.jade
+++ b/views/customer_tasks.jade
@@ -8,7 +8,7 @@ block content
     .container-fluid(ng-controller="TaskCtrl", ng-init="my_tasks=#{JSON.stringify(my_tasks)}")
         .row
             include includes/notifications
-            .col-lg-6
+            .col-lg-6.col-md-6.col-sm-7
                 include includes/customer_menu
                 .row
                     p Всего заданий: {{my_tasks.length}}
