--- a/views/send_result.jade
+++ b/views/send_result.jade
@@ -9,7 +9,7 @@ block content
     .container-fluid(ng-controller="TaskCtrl")
         .row
             include includes/notifications
-            .col-lg-6
+            .col-lg-6.col-md-6.col-sm-7
                 .row
                     p Прикрепите необходимые файлы
                     .div(ng-init="task= #{JSON.stringify(task)}")
