убрана заглушка на топ, поправлена верстка

--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -97,4 +97,8 @@ canvas
   height: auto
   background-color: #ffffff
   margin-top: 10px
+.rating_table
+  height: 80vh
+  font-weight: normal
+  border: 1px dashed #fff
 
