--- a/public/css/notify.css
+++ b/public/css/notify.css
@@ -1,1 +1,22 @@
-.notify{border:1px solid #fff;margin-bottom:15px;padding:5px}.notify .task{font-size:12px;border-bottom:1px solid #fff;margin-bottom:5px;display:block;font-weight:bold;background-color:transparent;color:#fff}.notify .date{font-size:10px;display:block}.notify p{font-size:14px}
+.notifyies {
+  height: 80vh;
+  border: 1px dashed #fff;
+  overflow: auto; }
+
+.notify {
+  border: 1px solid #fff;
+  margin-bottom: 15px;
+  padding: 5px; }
+  .notify .task {
+    font-size: 12px;
+    border-bottom: 1px solid #fff;
+    margin-bottom: 5px;
+    display: block;
+    font-weight: bold;
+    background-color: transparent;
+    color: #fff; }
+  .notify .date {
+    font-size: 10px;
+    display: block; }
+  .notify p {
+    font-size: 14px; }
