--- a/views/auth.jade
+++ b/views/auth.jade
@@ -7,7 +7,7 @@ block content
             div(ng-show="isEmpty(registerForm.name.$error)",style="color: #F2B1B1") {{registerForm.name.$error}}
             input(type="text",placeholder="Логин",class="form-control", name="login", ng-model="login")
             div(ng-show="isEmpty(registerForm.login.$error)",style="color: #F2B1B1") {{registerForm.login.$error}}
-            input(type="email",placeholder="Email",class="form-control", name="email", ng-model="email")
+            input(type="text",placeholder="Email",class="form-control", name="email", ng-model="email")
             div(ng-show="isEmpty(registerForm.email.$error)",style="color: #F2B1B1") {{registerForm.email.$error}}
             input(type="password",placeholder="Пароль",class="form-control", name="password", ng-model="password")
             div(ng-show="isEmpty(registerForm.password.$error)",style="color: #F2B1B1") {{registerForm.password.$error}}
