--- a/views/includes/top.jade
+++ b/views/includes/top.jade
@@ -1,4 +1,4 @@
 .col-lg-3.col-md-3.col-sm-12.col-xs-12.last-tasks
     p Рейтинги
-    .well(style="height:auto")
+    .well.rating_table(ng-controller="Admin")
         include rating
