--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,6 +20,7 @@ html(lang="en",ng-app="app")
             script(src="/js/config.js")
             script(src="/js/app.js")
             script(src="/js/controllers/chat.js")
+            script(src="/js/controllers/admin.js")
             script(src="/js/error_handler.js")
         block additional_scripts
 
